--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="google02d222e2e1e3810f.html">
   <title>VQZ Transportes</title>
   <link rel="stylesheet" href="style.css">
   <!-- Para iconos de teléfono y correo usamos Font Awesome -->
@@ -161,3 +162,4 @@
 
 </body>
 </html>
+
